完成STAY Activity逻辑